--- a/head/girl.html
+++ b/head/girl.html
@@ -4,6 +4,6 @@
 	<title>girl</title>
 </head>
 <body>
-	<h1 style = "line-height: 500px"><center>This is a girl</center></h1>
+	<h1 style = "line-height: 500px"><center><span style = "border:2px solid black;padding: 15px">This is a girl</span></center></h1>
 </body>
 </html>
