--- a/head/heading.html
+++ b/head/heading.html
@@ -60,6 +60,8 @@
     <center><a href = "table.html">Table</a></center>
     <br/>
     <center><a href = "iframe.html">Iframe</a></center>
+    <br/>
+    <center><a href = "javascript.html">javascript</a></center>
 
 </body>
 
