--- a/head/heading.html
+++ b/head/heading.html
@@ -62,6 +62,8 @@
     <center><a href = "iframe.html">Iframe</a></center>
     <br/>
     <center><a href = "javascript.html">javascript</a></center>
+    <br/>
+    <center><a href = "viewport.html">viewport</a></center>
 
 </body>
 
