--- a/head/iframe.html
+++ b/head/iframe.html
@@ -8,6 +8,6 @@
 	<iframe src = "table.html" style = "height:500px; width: 100%; border:none"  name = "frame">
 	</iframe>
 	<br/><br/>
-	<center><a href = "heading.html" target = "frame"><span style = "font-size:30px">Heading</span></a></center>
+	<center><a href = "index.html" target = "frame"><span style = "font-size:30px">Heading</span></a></center>
 </body>
 </html>
