--- a/head/javascript.html
+++ b/head/javascript.html
@@ -26,8 +26,8 @@
 	<li><span style = "border:2px solid black;background-color:#dddddd;padding:15px;margin:50px"><button onclick = dis(0)>Hide</span></button></li>
 	</ul></center>
 	<b><p id = "p01" style = "font-size:20px"></p></b>
-	<p id = "p02" style = "visibility:hidden"><img style = "float:right;visibility:hidden" src = "none" alt = "Image not find" id = "img"/>
-	This is a paragraph which is here to just check that the image is coming on the right side or not.If this is in right side in all the condition then the code is workig perfectly</p>/
+	<p id = "p02" style = "visibility:hidden"><img style = "float:right;visibility:hidden;width:50%;height:auto" src = "none" alt = "Image not find" id = "img"/>
+	This is a paragraph which is here to just check that the image is coming on the right side or not.If this is in right side in all the condition then the code is workig perfectly</p>
 	<script>
 		function dis(res){
 			if (res == 1)
