--- a/head/table.html
+++ b/head/table.html
@@ -22,6 +22,9 @@
 		background-color:black;
 		color:white;
 	}
+	caption{
+		font-size:25px;
+	}
 	</style>
 </head>
 <body>
@@ -30,9 +33,9 @@
 			<col span = "3"/>
 			<col span = "2" style = "background-color:yellow;"
 		</colgroup> -->
-		<br/>
-		<center><u><b><captioon>Students Data</captioon></center></u></b>
-		<br/>
+		<caption><center><u><b><pre>Students Data<br/></pre></u></b></center></caption>
+		<pre><br/></pre>
+		
 		<tr>
 			<th>Name</th>
 			<th>Roll no.</th>
