--- a/head/list.html
+++ b/head/list.html
@@ -5,12 +5,16 @@
             list
         </title>
         <style>
-        li.test{
+        .test li{
             display:inline;
             border:1px solid gray;
             padding:5px;
             overflow:hidden;
             background-color:white;
+        }
+        ul#ul1{
+            text-align:center;
+            list-style-position:inside;            
         }
     </style>
     </head>
@@ -26,13 +30,15 @@
             </li>
             <li>3rd element</li>
         </ol>
-        <hr>
+        <hr/>
         <h3><u>UNORDERERD LIST</u></h3>
         <h3>Horizontal list:</h3>
-        <ul class = "test" style = "list-style-type:none">
-            <li class = "test">1st element</li>
-            <li class = "test">2nd element</li>
-            <li class = "test">3rd element</li>
+        <ulstyle = "list-style-type:none">
+        <div class = "test">
+            <li>1st element</li>
+            <li>2nd element</li>
+            <li>3rd element</li>
+        </div>
         </ul>
         <br/>
         <h3>Virtical list:</h3>
@@ -49,5 +55,11 @@
             <dt>RAM</dt>
             <dd>Random Access Memory</dd>
         </dl>
+        <p><b><center>Unordered list in center</center></b></p>
+        <ul id = "ul1">
+            <li>1st element</li>
+            <li>2nd element</li>
+            <li>3rd element</li>
+        </ul>
     </body>
 </html>
